[package]
name = "neon_pi"
version = "0.1.0"
authors = ["tuckerstrausbaugh"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon_pi"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
rand = "*"
num_cpus = "*"
futures = "*"
futures-cpupool = "*"
